--- a/dailyExchange/dailyExchange/Base.lproj/Main.storyboard
+++ b/dailyExchange/dailyExchange/Base.lproj/Main.storyboard
@@ -10,10 +10,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Sign Up View Controller-->
         <scene sceneID="8cr-L8-LqK">
             <objects>
-                <viewController id="gNC-pN-TMv" sceneMemberID="viewController">
+                <viewController id="gNC-pN-TMv" customClass="SignUpViewController" customModule="dailyExchange" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="aa6-AU-fX3">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -25,10 +25,10 @@
             </objects>
             <point key="canvasLocation" x="-161" y="-531"/>
         </scene>
-        <!--View Controller-->
+        <!--Settings View Controller-->
         <scene sceneID="dbj-Ja-WKj">
             <objects>
-                <viewController id="UfY-qF-KgV" sceneMemberID="viewController">
+                <viewController id="UfY-qF-KgV" customClass="SettingsViewController" customModule="dailyExchange" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="4tP-Yp-OPJ">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -38,23 +38,60 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="IHB-bc-ZL5" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="476" y="-527"/>
+            <point key="canvasLocation" x="1142" y="-531"/>
         </scene>
-        <!--Item-->
+        <!--Main View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="dailyExchange" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="MainViewController" customModule="dailyExchange" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="diV-XP-U0a">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            </navigationBar>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item" id="QJr-X0-m1E"/>
+                    <toolbarItems/>
+                    <navigationItem key="navigationItem" id="7wV-0N-uxM">
+                        <barButtonItem key="rightBarButtonItem" title="settings" id="YhP-1x-IYM">
+                            <connections>
+                                <segue destination="UfY-qF-KgV" kind="show" id="R6j-iQ-egw"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
+                    <connections>
+                        <segue destination="gNC-pN-TMv" kind="presentation" identifier="mainToSignUp" id="Fmr-Pt-ep2"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="479.19999999999999" y="133.5832083958021"/>
+            <point key="canvasLocation" x="1142" y="133"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="AbU-al-ITO">
+            <objects>
+                <viewController id="yQU-AS-mJ3" customClass="ChartViewController" customModule="dailyExchange" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="LfV-v5-1IG">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="3Vb-ly-Xci"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item" id="MVg-UU-qJc"/>
+                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
+                    <connections>
+                        <segue destination="gNC-pN-TMv" kind="presentation" identifier="chartToSignUp" id="i5t-wW-1Jg"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="uI2-aX-XDa" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1142" y="828"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="u2m-b8-Ldt">
@@ -62,16 +99,40 @@
                 <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="mvo-BZ-JBE" sceneMemberID="viewController">
                     <toolbarItems/>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="u4T-Ie-WNI">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
                     <connections>
-                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="bFR-NE-LdG"/>
+                        <segue destination="C60-kO-C2U" kind="relationship" relationship="viewControllers" id="bFR-NE-LdG"/>
+                        <segue destination="yQU-AS-mJ3" kind="relationship" relationship="viewControllers" id="GPr-M0-0Hd"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="30S-A5-39V" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-160" y="133.13343328335833"/>
         </scene>
+        <!--Item-->
+        <scene sceneID="gjx-9A-50N">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="C60-kO-C2U" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="QJr-X0-m1E"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Jm8-76-CdI">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="yGH-Cx-63G"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="LGY-Y5-NpO" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="478.39999999999998" y="133.13343328335833"/>
+        </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="i5t-wW-1Jg"/>
+    </inferredMetricsTieBreakers>
 </document>
