--- a/dailyExchange/dailyExchange/Base.lproj/Main.storyboard
+++ b/dailyExchange/dailyExchange/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -17,13 +18,149 @@
                     <view key="view" contentMode="scaleToFill" id="aa6-AU-fX3">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sign Up" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nX0-tK-ST3">
+                                <rect key="frame" x="157" y="20" width="61" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="i9D-mY-GlL">
+                                <rect key="frame" x="164" y="617" width="47" height="30"/>
+                                <state key="normal" title="Sign In"/>
+                                <connections>
+                                    <segue destination="j71-zB-vEF" kind="show" identifier="SignUpToSignIn" id="L4c-Vo-p5I"/>
+                                </connections>
+                            </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Icl-91-qUh">
+                                <rect key="frame" x="47" y="280.5" width="281" height="126"/>
+                                <subviews>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="c2h-qC-z0o">
+                                        <rect key="frame" x="8" y="8" width="265.5" height="30"/>
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Hce-lD-uMF">
+                                        <rect key="frame" x="8" y="46" width="265.5" height="30"/>
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="b1W-Ql-UbW">
+                                        <rect key="frame" x="8" y="88" width="265.5" height="30"/>
+                                        <state key="normal" title="Sign Up"/>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="b1W-Ql-UbW" secondAttribute="bottom" constant="8" id="68c-1f-sMZ"/>
+                                    <constraint firstItem="b1W-Ql-UbW" firstAttribute="trailing" secondItem="Hce-lD-uMF" secondAttribute="trailing" id="Ieo-mD-0xH"/>
+                                    <constraint firstItem="Hce-lD-uMF" firstAttribute="leading" secondItem="c2h-qC-z0o" secondAttribute="leading" id="NEX-hH-wv3"/>
+                                    <constraint firstAttribute="trailing" secondItem="c2h-qC-z0o" secondAttribute="trailing" constant="8" id="PG3-tv-e7o"/>
+                                    <constraint firstItem="b1W-Ql-UbW" firstAttribute="centerX" secondItem="Hce-lD-uMF" secondAttribute="centerX" id="X9t-H2-g8c"/>
+                                    <constraint firstItem="b1W-Ql-UbW" firstAttribute="leading" secondItem="Hce-lD-uMF" secondAttribute="leading" id="cc0-ds-OkE"/>
+                                    <constraint firstItem="c2h-qC-z0o" firstAttribute="top" secondItem="Icl-91-qUh" secondAttribute="top" constant="8" id="ezc-OG-SkZ"/>
+                                    <constraint firstItem="b1W-Ql-UbW" firstAttribute="top" secondItem="Hce-lD-uMF" secondAttribute="bottom" constant="12" id="kHV-xt-dNl"/>
+                                    <constraint firstItem="c2h-qC-z0o" firstAttribute="leading" secondItem="Icl-91-qUh" secondAttribute="leading" constant="8" id="kxC-7b-XxT"/>
+                                    <constraint firstItem="Hce-lD-uMF" firstAttribute="centerX" secondItem="c2h-qC-z0o" secondAttribute="centerX" id="pew-5m-56y"/>
+                                    <constraint firstItem="Hce-lD-uMF" firstAttribute="top" secondItem="c2h-qC-z0o" secondAttribute="bottom" constant="8" id="qgu-7F-qe9"/>
+                                    <constraint firstItem="Hce-lD-uMF" firstAttribute="trailing" secondItem="c2h-qC-z0o" secondAttribute="trailing" id="sW9-c3-QIa"/>
+                                </constraints>
+                            </view>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="nX0-tK-ST3" firstAttribute="centerX" secondItem="ppm-AS-HkV" secondAttribute="centerX" id="1DO-Yl-bAL"/>
+                            <constraint firstItem="Icl-91-qUh" firstAttribute="centerX" secondItem="ppm-AS-HkV" secondAttribute="centerX" id="CHK-gh-QGJ"/>
+                            <constraint firstItem="Icl-91-qUh" firstAttribute="centerY" secondItem="ppm-AS-HkV" secondAttribute="centerY" id="Ihy-4n-MVX"/>
+                            <constraint firstItem="i9D-mY-GlL" firstAttribute="centerX" secondItem="ppm-AS-HkV" secondAttribute="centerX" id="KVd-lz-60T"/>
+                            <constraint firstItem="Icl-91-qUh" firstAttribute="width" secondItem="aa6-AU-fX3" secondAttribute="width" multiplier="3:4" id="NYv-6V-Cn5"/>
+                            <constraint firstItem="ppm-AS-HkV" firstAttribute="bottom" secondItem="i9D-mY-GlL" secondAttribute="bottom" constant="20" id="Nls-wq-0Zn"/>
+                            <constraint firstItem="nX0-tK-ST3" firstAttribute="top" secondItem="ppm-AS-HkV" secondAttribute="top" id="TpM-lO-TDP"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="ppm-AS-HkV"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bhw-bz-6em" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-161" y="-531"/>
+            <point key="canvasLocation" x="42" y="-591"/>
+        </scene>
+        <!--Sign In View Controller-->
+        <scene sceneID="EUD-NY-12T">
+            <objects>
+                <viewController id="j71-zB-vEF" customClass="SignInViewController" customModule="dailyExchange" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="BE4-oE-UPi">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Akj-xr-uTu">
+                                <rect key="frame" x="47" y="280.5" width="281" height="126"/>
+                                <subviews>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="FxW-kp-d32">
+                                        <rect key="frame" x="8" y="8" width="265.5" height="30"/>
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="fhh-D9-XFf">
+                                        <rect key="frame" x="8" y="46" width="265.5" height="30"/>
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Hi2-rK-n1L">
+                                        <rect key="frame" x="8" y="88" width="265.5" height="30"/>
+                                        <state key="normal" title="Sign In"/>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="Hi2-rK-n1L" secondAttribute="bottom" constant="8" id="4H1-Ga-Xk5"/>
+                                    <constraint firstItem="fhh-D9-XFf" firstAttribute="centerX" secondItem="FxW-kp-d32" secondAttribute="centerX" id="7Gt-f2-kT3"/>
+                                    <constraint firstItem="Hi2-rK-n1L" firstAttribute="centerX" secondItem="fhh-D9-XFf" secondAttribute="centerX" id="Jg0-kt-r20"/>
+                                    <constraint firstItem="fhh-D9-XFf" firstAttribute="trailing" secondItem="FxW-kp-d32" secondAttribute="trailing" id="Lzo-TM-Sd5"/>
+                                    <constraint firstAttribute="trailing" secondItem="FxW-kp-d32" secondAttribute="trailing" constant="8" id="XiS-Dn-f31"/>
+                                    <constraint firstItem="Hi2-rK-n1L" firstAttribute="trailing" secondItem="fhh-D9-XFf" secondAttribute="trailing" id="ZdY-RU-Acb"/>
+                                    <constraint firstItem="FxW-kp-d32" firstAttribute="leading" secondItem="Akj-xr-uTu" secondAttribute="leading" constant="8" id="eoG-Y7-dqV"/>
+                                    <constraint firstItem="FxW-kp-d32" firstAttribute="top" secondItem="Akj-xr-uTu" secondAttribute="top" constant="8" id="fxI-mk-6Ee"/>
+                                    <constraint firstItem="fhh-D9-XFf" firstAttribute="top" secondItem="FxW-kp-d32" secondAttribute="bottom" constant="8" id="iMf-ju-hNC"/>
+                                    <constraint firstItem="fhh-D9-XFf" firstAttribute="leading" secondItem="FxW-kp-d32" secondAttribute="leading" id="mgw-wB-rBO"/>
+                                    <constraint firstItem="Hi2-rK-n1L" firstAttribute="leading" secondItem="fhh-D9-XFf" secondAttribute="leading" id="q5k-ZC-5TP"/>
+                                    <constraint firstItem="Hi2-rK-n1L" firstAttribute="top" secondItem="fhh-D9-XFf" secondAttribute="bottom" constant="12" id="qft-Tb-Iud"/>
+                                </constraints>
+                            </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sign In" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tgM-W1-tU7">
+                                <rect key="frame" x="161" y="20" width="52" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bt7-nY-3eS">
+                                <rect key="frame" x="161" y="617" width="52" height="30"/>
+                                <state key="normal" title="Sign up"/>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="Akj-xr-uTu" firstAttribute="centerY" secondItem="0Eh-zA-2OH" secondAttribute="centerY" id="167-ad-Xng"/>
+                            <constraint firstItem="bt7-nY-3eS" firstAttribute="centerX" secondItem="0Eh-zA-2OH" secondAttribute="centerX" id="7n5-gb-FTq"/>
+                            <constraint firstItem="Akj-xr-uTu" firstAttribute="centerX" secondItem="0Eh-zA-2OH" secondAttribute="centerX" id="Rqt-G5-gHd"/>
+                            <constraint firstItem="Akj-xr-uTu" firstAttribute="width" secondItem="BE4-oE-UPi" secondAttribute="width" multiplier="3:4" id="glf-Mi-3jD"/>
+                            <constraint firstItem="tgM-W1-tU7" firstAttribute="centerX" secondItem="0Eh-zA-2OH" secondAttribute="centerX" id="mdn-wW-mx0"/>
+                            <constraint firstItem="0Eh-zA-2OH" firstAttribute="bottom" secondItem="bt7-nY-3eS" secondAttribute="bottom" constant="20" id="xpl-7H-qnB"/>
+                            <constraint firstItem="tgM-W1-tU7" firstAttribute="top" secondItem="0Eh-zA-2OH" secondAttribute="top" id="y2R-I6-kYc"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="0Eh-zA-2OH"/>
+                    </view>
+                    <connections>
+                        <segue destination="w4c-9O-JGQ" kind="unwind" identifier="unwindToSignUp" unwindAction="unwindToSignUpWithSegue:" id="ulx-Aw-HDo"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="pi4-qF-NwL" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="w4c-9O-JGQ" userLabel="Exit" sceneMemberID="exit"/>
+            </objects>
+            <point key="canvasLocation" x="687" y="-591"/>
         </scene>
         <!--Settings View Controller-->
         <scene sceneID="dbj-Ja-WKj">
@@ -38,7 +175,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="IHB-bc-ZL5" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1142" y="-531"/>
+            <point key="canvasLocation" x="1342" y="-591"/>
         </scene>
         <!--Main View Controller-->
         <scene sceneID="tne-QT-ifu">
@@ -47,12 +184,6 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="diV-XP-U0a">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                            </navigationBar>
-                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
@@ -71,7 +202,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1142" y="133"/>
+            <point key="canvasLocation" x="1342" y="133"/>
         </scene>
         <!--Item-->
         <scene sceneID="AbU-al-ITO">
@@ -91,7 +222,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="uI2-aX-XDa" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1142" y="828"/>
+            <point key="canvasLocation" x="1342" y="910"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="u2m-b8-Ldt">
