--- a/dailyExchange/dailyExchange/Base.lproj/Main.storyboard
+++ b/dailyExchange/dailyExchange/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="mvo-BZ-JBE">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="gNC-pN-TMv">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -50,6 +50,9 @@
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="b1W-Ql-UbW">
                                         <rect key="frame" x="8" y="88" width="265.5" height="30"/>
                                         <state key="normal" title="Sign Up"/>
+                                        <connections>
+                                            <action selector="signUpButtonTapped:" destination="gNC-pN-TMv" eventType="touchUpInside" id="GBQ-QE-FR6"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -81,6 +84,10 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="ppm-AS-HkV"/>
                     </view>
+                    <connections>
+                        <outlet property="emailTextField" destination="c2h-qC-z0o" id="PcD-x0-6fG"/>
+                        <outlet property="passwordTextField" destination="Hce-lD-uMF" id="Ugr-Rg-rgQ"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bhw-bz-6em" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -112,6 +119,9 @@
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Hi2-rK-n1L">
                                         <rect key="frame" x="8" y="88" width="265.5" height="30"/>
                                         <state key="normal" title="Sign In"/>
+                                        <connections>
+                                            <action selector="signInButtonTapped:" destination="j71-zB-vEF" eventType="touchUpInside" id="5AQ-W9-3xV"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -139,6 +149,9 @@
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bt7-nY-3eS">
                                 <rect key="frame" x="161" y="617" width="52" height="30"/>
                                 <state key="normal" title="Sign up"/>
+                                <connections>
+                                    <action selector="signUpButtonTapped:" destination="j71-zB-vEF" eventType="touchUpInside" id="mzP-Eq-zEt"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -154,6 +167,8 @@
                         <viewLayoutGuide key="safeArea" id="0Eh-zA-2OH"/>
                     </view>
                     <connections>
+                        <outlet property="emailTextField" destination="FxW-kp-d32" id="4U0-Wk-8UO"/>
+                        <outlet property="passwordTextField" destination="fhh-D9-XFf" id="QUq-n7-rfX"/>
                         <segue destination="w4c-9O-JGQ" kind="unwind" identifier="unwindToSignUp" unwindAction="unwindToSignUpWithSegue:" id="ulx-Aw-HDo"/>
                     </connections>
                 </viewController>
